version 0.9.5, 05/13/2003
	1. fix a bug introduced in 0.9.4, caused seg. fault.
	
version 0.9.4, 04/29/2003
	1. drop the assumption that calloced pointers and doubles will 
	   have NULL and 0.0 initial values, which is not portable.
	2. add various Set... routines for convenience.

version 0.9.3, 04/18/2003
	1. remove DRTable function.
	2. break up transition arrays for RR, AI, and CI, as for CE.
	3. add function GetConfigNR().
	4. improve efficiency on angular reduction.
	
version 0.9.2, 04/10/2003
	1. add routines returning ionization thresholds in CRM.
	2. correct a bug that causes incorrect M1 transition rates
	   sometimes. It usualy occurs when the upper and lower levels are
	   affected by configuration interaction significantly.
	3. add reinitialization step in the end of every calculation
	   procedure, so that it is no longer necessary to call it
	   manually.
	4. add EPhFit() for the ionization thresholds used in PhFit.
	
version 0.9.1, 03/27/2003
	1. correct manual on GetPotential.
	2. correct an error in Uehling potential.
	3. add the ionization cross sections from aladdin database.
	
Version 0.9.0, 03/17/2003
	1. RadialRyd match point needs to be further reduced for Intel
	   machines. the match point is now z*r=10^2.
	2. number of points in half wavelength for high n states reduced 
	   to 14 from the original 16. this is dense enough and allow a
	   slightly larger coverage of the radial grid.
	3. add the function Y5N (i.e., the Wittaker function) to pfac.

Version 0.8.9, 03/11/2003
	1. in RadialRyd, the matching point has to be reduced to avoid the
	   round off errors in COULCC.
	2. improve the match of RR cross section at highest grid energy.
	3. update the FAQ on the use of OptimizeRadial, and the demo
	   scripts accordingly.
	4. avoid overflow in RRRate1E.
	5. fix a bug in RRRate1E and PIRate1E for high energy cross
	   sections.
	6. add TotalPICross and TotalCICross functions.
	7. the scaling factor in BED CI cross sections is modified.
	